--- a/contact.html
+++ b/contact.html
@@ -11,5 +11,8 @@
     <a href="mailto:atasomugha@gmail.com">Guggle</a>
     <br><br>
     <a href="index.html">Home</a>
+    <footer>
+    <p>© 2025 Anachebe</p>        
+    </footer>
 </body>
 </html>
