--- a/hobby.html
+++ b/hobby.html
@@ -13,6 +13,9 @@
         from different cultures — with varying levels of success, but always with enthusiasm. And when I really need to <br>
         reset, I compete in online rubber duck beauty contests — a deeply unserious but fiercely competitive corner of the <br>
         internet where presentation is everything.</p>
-        <a href="index.html">Home</a>
+    <a href="index.html">Home</a>
+    <footer>
+        <p>© 2025 Anachebe</p>        
+    </footer>
 </body>
 </html>
