--- a/index.html
+++ b/index.html
@@ -68,6 +68,9 @@ and delivering excellent customer service. Brings strong communication and probl
             <hr>
             <a href="/contact.html">Contact</a>
             <a href="/hobby.html">Hobbies</a>
+            <footer>
+                <p>© 2025 Anachebe</p>        
+            </footer>
 
 </body>
 </html>
